--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo"><span class="w3-hide-small">I'm</span> Pharkhin Pankasam</h1>
     
-    <img src="img/FB_IMG_1630216279759.jpg" alt=""width="400px" height="500px">
+    <img src="FB_IMG_1630216279759.jpg" alt=""width="400px" height="500px">
     <p>Lanna Polytechnic Chaingmai Technological College.</p>
   </header>
 
